--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <div class="row g-4 py-5 row-cols-1 row-cols-lg-4">
     <div class="col d-flex align-items-start astro-OMK64TKM" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="0">
 <div class="icon-square bg-light text-dark flex-shrink-0 me-3 astro-OMK64TKM">
-<img src="/assets/book.svg" class="astro-OMK64TKM">
+<img src="/public/assets/book.svg" class="astro-OMK64TKM">
 </div>
 <div style="flex-direction: column;" class="astro-OMK64TKM">
 <h2 class="astro-OMK64TKM" id="learn"><strong class="astro-OMK64TKM">Learn</strong></h2>
@@ -80,7 +80,7 @@
 </div>
 <div class="col d-flex align-items-start astro-OMK64TKM" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="100">
 <div class="icon-square bg-light text-dark flex-shrink-0 me-3 astro-OMK64TKM">
-<img src="/assets/code.svg" class="astro-OMK64TKM">
+<img src="/public/assets/code.svg" class="astro-OMK64TKM">
 </div>
 <div style="flex-direction: column;" class="astro-OMK64TKM">
 <h2 class="astro-OMK64TKM" id="contribute"><strong class="astro-OMK64TKM">Contribute</strong></h2>
@@ -89,7 +89,7 @@
 </div>
 <div class="col d-flex align-items-start astro-OMK64TKM" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="200">
 <div class="icon-square bg-light text-dark flex-shrink-0 me-3 astro-OMK64TKM">
-<img src="/assets/money.svg" class="astro-OMK64TKM">
+<img src="/public/assets/money.svg" class="astro-OMK64TKM">
 </div>
 <div style="flex-direction: column;" class="astro-OMK64TKM">
 <h2 class="astro-OMK64TKM" id="earn"><strong class="astro-OMK64TKM">Earn</strong></h2>
@@ -98,7 +98,7 @@
 </div>
 <div class="col d-flex align-items-start astro-OMK64TKM" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="300">
 <div class="icon-square bg-light text-dark flex-shrink-0 me-3 astro-OMK64TKM">
-<img src="/assets/wallet.svg" class="astro-OMK64TKM">
+<img src="/public/assets/wallet.svg" class="astro-OMK64TKM">
 </div>
 <div style="flex-direction: column;" class="astro-OMK64TKM">
 <h2 class="astro-OMK64TKM" id="fund"><strong class="astro-OMK64TKM">Fund</strong></h2>
@@ -124,7 +124,7 @@
       
       <div class="row featurette">
 <div client:media="(max-width: 700px)" class="col-md-5 order-md-1" style="display: flex;" data-aos="fade-left" data-aos-duration="2000">
-<img src="/assets/play.svg" style="width: 70%; margin: 4em;">
+<img src="/public/assets/play.svg" style="width: 70%; margin: 4em;">
 </div>
 <div class="lead col-md-7" id="about" data-aos="fade-right" data-aos-duration="2000" style="min-height: 30rem; padding-top: 7rem;">
 <h1 id="about-rchain-developers-cooperation">About <span class="text-muted"><span style="color: #A93226;"><strong>RChain</strong></span> Developers Cooperation.</span></h1>
@@ -133,7 +133,7 @@
 </div><hr>
 <div class="row featurette">
 <div client:media="(max-width: 700px)" class="col-md-5 order-md-1" style="display: flex;" data-aos="fade-right" data-aos-duration="2000">
-<img src="/assets/hand.svg" style="width: 70%; margin: 4em;">
+<img src="/public/assets/hand.svg" style="width: 70%; margin: 4em;">
 </div>
 <div class="lead col-md-7 order-md-2" id="about" data-aos="fade-left" data-aos-duration="2000" style="min-height: 30rem; padding-top: 7rem;">
 <h1 id="support-the-open-web-and-influence-its-future">Support the Open Web <span class="text-muted">and Influence its Future</span></h1>
@@ -143,7 +143,7 @@
 </div><hr>
 <div class="row featurette">
 <div client:media="(max-width: 700px)" class="col-md-5 order-md-1" style="display: flex;" data-aos="fade-left" data-aos-duration="2000">
-<img src="/assets/collab.svg" style="width: 70%; margin: 4em;">
+<img src="/public/assets/collab.svg" style="width: 70%; margin: 4em;">
 </div>
 <div class="lead col-md-7" id="about" data-aos="fade-right" data-aos-duration="2000" style="min-height: 30rem; padding-top: 7rem;">
 <h1 id="existing-problem">Existing <span class="text-muted">Problem</span></h1>
@@ -152,7 +152,7 @@
 </div><hr>
 <div class="row featurette">
 <div client:media="(max-width: 700px)" class="col-md-5 order-md-1" style="display: flex;" data-aos="fade-right" data-aos-duration="2000">
-<img src="/assets/teamwork.svg" style="width: 70%; margin: 4em;">
+<img src="/public/assets/teamwork.svg" style="width: 70%; margin: 4em;">
 </div>
 <div class="lead col-md-7 order-md-2" id="about" data-aos="fade-left" data-aos-duration="2000" style="min-height: 30rem; padding-top: 7rem;">
 <h1 id="our-collective-solution">Our Collective <span class="text-muted">Solution</span></h1>
